fix github link disappearing when branch name is too long (#1200)

--- a/blueocean-dashboard/src/main/less/run-details-header.less
+++ b/blueocean-dashboard/src/main/less/run-details-header.less
@@ -57,10 +57,12 @@
         }
 
         span {
+            position: relative;
             display: block;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            padding-right: 17px;
 
             svg {
                 display: block;
@@ -69,9 +71,14 @@
                 margin-left: 3px;
             }
 
-            .inline-svg svg{
-                display: inline-block;
-                vertical-align: middle;
+            .inline-svg {
+                position: absolute;
+                right: 0;
+
+                svg{
+                    display: inline-block;
+                    vertical-align: middle;
+                }
             }
         }
 
